efk/microgateway-kibana.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microgateway-kibana
  labels:
    app: microgateway-kibana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: microgateway-kibana
  template:
    metadata:
      labels:
        app: microgateway-kibana
    spec:
      imagePullSecrets:
        - name: dockerregcred
      containers:
      - name: microgateway-kibana
        image: ergon/airlock-microgateway:1.0
        imagePullPolicy: IfNotPresent
        ports:
        - name: https
          containerPort: 8443
        volumeMounts:
        - name: config
          mountPath: /config/config.yaml
          subPath: config.yaml
        - name: secret
          mountPath: /secret/config/
          readOnly: true
        livenessProbe:
          httpGet:
            path: /healthz
            port: https
            scheme: HTTPS
          initialDelaySeconds: 90
        readinessProbe:
          httpGet:
            path: /healthz
            port: https
            scheme: HTTPS
          initialDelaySeconds: 30
      volumes:
      - name: config
        configMap:
          name: microgateway-kibana-config
      - name: secret
        secret:
          secretName: microgateway-secrets
---
apiVersion: v1
kind: Service
metadata:
  name: microgateway-kibana
  labels:
    app: microgateway-kibana
spec:
  selector:
    app: microgateway-kibana
  ports:
    - name: https
      port: 8443
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-microgateway-kibana
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: https
spec:
  rules:
  - http:
      paths:
      - path: /kibana
        pathType: Prefix
        backend:
          service:
            name: microgateway-kibana
            port: 
              number: 8443
